# AI

./: .gitignore
checkers/: Cargo.toml  README.md  build.sh
checkers/json-tree-viewer/: package.json
checkers/json-tree-viewer/src/: App.tsx
checkers/json-tree-viewer/src/components/: Tree.tsx
checkers/json-tree-viewer/src/lib/: TreeDT.ts
checkers/src/: .gitignore  main.rs
checkers/src/ai/: heuristic.rs  mod.rs  visualize_tree_ai.rs
checkers/src/board/: err.rs  mod.rs
neural_network/: Cargo.toml  README.md  plot.py
neural_network/src/: lib.rs
neural_network/src/network/: activation.rs  metric.rs  mod.rs
neural_network/src/parse/: file.rs  mod.rs  user_input.rs  util.rs
